--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-grappelli==2.8.1
 django-gravatar2==1.4.0
 django-model-utils==2.5
 django-markupfield==1.4.0
+django-picklefield==0.3.2
 whitenoise==3.2
 gunicorn==19.6.0
 
@@ -31,6 +32,14 @@ python-dateutil==2.5.3
 Markdown==2.6.6
 bleach==1.4.3
 html5lib==0.9999999
+
+## NLP and Parsing Dependencies
+nltk==3.2.1
+beautifulsoup4==4.4.1
+readability-lxml==0.6.2
+lxml==3.6.0
+chardet==2.3.0
+cssselect==0.9.2
 
 ## Testing
 nose==1.3.7
