--- a/requirements.txt
+++ b/requirements.txt
@@ -35,12 +35,16 @@ html5lib==0.9999999
 
 ## NLP and Parsing Dependencies
 nltk==3.2.1
-scikit-learn==0.17.1
 beautifulsoup4==4.4.1
 readability-lxml==0.6.2
 lxml==3.6.0
 chardet==2.3.0
 cssselect==0.9.2
+
+## Machine Learning Dependencies
+scikit-learn==0.17.1
+numpy==1.11.1
+scipy==0.18.0
 
 ## Testing
 nose==1.3.7
@@ -50,7 +54,3 @@ coverage==4.1
 pip==8.1.2
 setuptools==24.0.3
 wheel==0.29.0
-
-## The following requirements were added by pip freeze:
-numpy==1.11.1
-scipy==0.18.0
