--- a/.gitignore
+++ b/.gitignore
@@ -102,6 +102,8 @@ corpus/fixtures/*.pickle
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+.idea/
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
